--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,12 @@ services:
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code
+      - ./media:/code/media
     ports:
       - "8000:8000"
     env_file:
         - ./.env
     depends_on:
       - db
+volumes:
+  media:
