--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     volumes:
       - .:/code
       - ./media:/code/media
+      - ./locale:/code/locale
+      - ./static:/code/static
     ports:
       - "8000:8000"
     env_file:
@@ -22,3 +24,5 @@ services:
       - db
 volumes:
   media:
+  locale:
+  static:
