--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 POSTGRES_DB=postgres
-OSTGRES_NAME=postgres
+POSTGRES_NAME=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_HOST=db
